--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -1,46 +1,50 @@
-<%- include('./partials/head') %>
-      
-<%- include('./partials/header-nav') %>
-  
-<main>
-  <div class="contact">
-    <h1>CONTACT</h1>
-    <form class="contact-form" action="/contact" method="POST">      
-      <label>
-        Nom:
-        <input type="text" name="Nom">
-      </label>      
-      <label>
-        Prénom:
-        <input type="text" name="Prénom">
-      </label>      
-      <label>
-        Email:
-        <input type="email" name="email">
-      </label>      
-      <label>
-        Votre message:
-        <textarea name="message"></textarea>
-      </label>      
-      <button type="submit">Envoyer</button>
-    </form>
-    <section class="contact-section">
-      <h2>LE SAVIEZ-VOUS ?</h2>
-      <p class="contact-p">
-        PAR DÉCISION MINISTÉRIELLE DU 24/04/1968,<br>
-        VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
-        EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION ! <br>
-        <u><b>Pour plus de renseignements :</b></u> <br>
-        Contactez-nous en priorité au :
-        <br>
-        02.XX.XX.XX.XX
-        <br>
-        Courriel :
-        <br>
-        contact@ambulanceX.com
-      </p>
-    </section>
-  </div>
-</main>
-
-<%- include('./partials/footer') %>
+<!DOCTYPE html>
+<html lang="fr">
+  <%- include('./partials/head') %>
+  <body>
+    <div class="container">
+      <%- include('./partials/header-nav') %>
+      <main>
+        <div class="contact">
+          <h1>CONTACT</h1>
+          <form class="contact-form" action="/contact" method="POST">      
+            <label>
+              Nom:
+              <input type="text" name="Nom">
+            </label>      
+            <label>
+              Prénom:
+              <input type="text" name="Prénom">
+            </label>      
+            <label>
+              Email:
+              <input type="email" name="email">
+            </label>      
+            <label>
+              Votre message:
+              <textarea name="message"></textarea>
+            </label>      
+            <button type="submit">Envoyer</button>
+          </form>
+          <section class="contact-section">
+            <h2>LE SAVIEZ-VOUS ?</h2>
+            <p class="contact-p">
+              PAR DÉCISION MINISTÉRIELLE DU 24/04/1968,<br>
+              VOUS AVEZ LE LIBRE CHOIX DE VOTRE AMBULANCIER <br>
+              EXIGEZ-LE SURTOUT LORS DE VOS ENTRÉES ET SORTIES D'HOSPITALISATION ! <br>
+              <u><b>Pour plus de renseignements :</b></u> <br>
+              Contactez-nous en priorité au :
+              <br>
+              02.XX.XX.XX.XX
+              <br>
+              Courriel :
+              <br>
+              contact@ambulanceX.com
+            </p>
+          </section>
+        </div>
+      </main>
+      <%- include('./partials/footer') %>
+    </div>
+  </body>
+</html>
