--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -20,15 +20,23 @@ a {
   text-decoration: none;
 }
 
-.error {
+.alert {
   background-color: white;
   border: solid red 0.3em;
   color: red;
-  font-size: 1.5em;
+  font-size: 1em;
   font-weight: bold;
   padding: 0.3em;
 }
 
+.success {
+  background-color: white;
+  border: solid green 0.3em;
+  color: green;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 0.3em;
+}
 
 
 /* GRID */
