--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -1,15 +1,16 @@
-<%- include('./partials/head') %>
-
-<%- include('./partials/header-nav') %>
-
-<main>
-  <div class="Page404">
-    
-    <h1>Oups, tu es perdu/ue ???</h1>
-        
-    <p>La sortie, c'est par <a href="/">là</a>!</p>
-    
-  </div>
-</main>
-    
-<%- include('./partials/footer') %>
+<!DOCTYPE html>
+<html lang="fr">
+  <%- include('./partials/head') %>
+    <body>
+      <div class="container"> 
+        <%- include('./partials/header-nav') %>
+        <main>
+        <div class="Page404">
+            <h1>Oups, tu es perdu/ue ???</h1>
+            <a href="/">La sortie, c'est par là !!!</a>
+        </div>
+        </main>
+        <%- include('./partials/footer') %>
+      </div>
+    </body>
+</html>
