--- a/app/public/css/404.css
+++ b/app/public/css/404.css
@@ -1,15 +1,13 @@
 /* MAIN -404- */
 
 .Page404 {
+  align-items: center;
   background-color: antiquewhite;
-  border: solid black 0.5em;
-  border-radius: 0.5em;
+  border: solid black 0.1em;
+  color: black;
   display: flex;
   flex-direction: column;
-  font-size: 2em;
-  gap: 2em;
-  height: 30%;
+  gap: 3em;
+  padding: 3em;
   justify-content: center;
-  padding: 1em;
-  text-align: center;
 }
