--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -5,10 +5,10 @@
       <div class="container"> 
         <%- include('./partials/header-nav') %>
         <main>
-        <div class="Page404">
-            <h1>Oups, tu es perdu/ue ???</h1>
-            <a href="/">La sortie, c'est par là !!!</a>
-        </div>
+          <div class="Page404">
+              <h1 class="Page404-h1">Oups, tu es perdu/ue ???</h1>
+              <a class="Page404-a" href="/">La sortie, c'est par là !!!</a>
+          </div>
         </main>
         <%- include('./partials/footer') %>
       </div>
