import direct de dotenv/ajout de googlefonts au CSP

--- a/app/views/account.ejs
+++ b/app/views/account.ejs
@@ -9,15 +9,15 @@
           <section class="account-section">
             <h2>Informations de compte</h2>
             <label for="firstname">
-              Prénom :
+              Prénom : seb
               <p id="infoFirstname"></p>
             </label>
             <label for="lastname">
-              Nom :
+              Nom : fcx
               <p id="infoLastname"></p>
             </label>
             <label for="email">
-              Courriel :
+              Courriel : sebfcx@gmail.com
               <p id="infoEmail"></p>
             </label>
           </section>   
