--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -83,6 +83,7 @@ footer {
   align-items: center;
   display: flex;
   justify-content: space-between;
+  text-align: center;
   width: 100%;
 }
 .header-a {
