--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -27,6 +27,7 @@ a {
   font-size: 1em;
   font-weight: bold;
   padding: 0.3em;
+  text-align: center;
 }
 
 .success {
@@ -36,6 +37,7 @@ a {
   font-size: 1em;
   font-weight: bold;
   padding: 0.3em;
+  text-align: center;
 }
 
 
