--- a/app/views/partials/header-nav.ejs
+++ b/app/views/partials/header-nav.ejs
@@ -1,7 +1,11 @@
 <header>
   <div class="header">
-    <img class="header-img" src="images/caduceeAmbulancier.webp" alt="Caducée Ambulancier">
-    <h1 class="header-h1">Ambulance X</h1>
+    <a href="/">
+      <img class="header-img" src="images/caduce.webp" alt="CaducéeAmbulancier">
+    </a>
+    <a href="/">
+      <h1 class="header-h1">Ambulance X</h1>
+    </a>  
     <section class="header-section">
       <a class="header-a" href="/login">S'identifier</a>
       <a class="header-a" href="/signup">S'enregistrer</a>
