--- a/app/views/vehicules.ejs
+++ b/app/views/vehicules.ejs
@@ -6,9 +6,7 @@
       <%- include('./partials/header-nav') %>
       <main>
         <div class="vehicules">
-          <div class="vehicules-slide">
-            <img id="picture" onclick="Slide(1)" src="images/vsl01.webp" alt="Photo de Véhicule Sanitaire Léger">
-          </div>
+            <img id="vehicules-slide" onclick="Slide(1)" src="images/vsl01.webp" alt="Photo de Véhicule Sanitaire Léger">
         </div>
       </main>
       <%- include('./partials/footer') %>
