--- a/app/public/css/accueil.css
+++ b/app/public/css/accueil.css
@@ -14,6 +14,7 @@
 .accueil-h1 {
   align-self: center;
   background-color: whitesmoke;
+  border: solid black 0.3em;
   color: royalblue;
   padding: 0.3em;
 }
