--- a/app/public/css/vehicules.css
+++ b/app/public/css/vehicules.css
@@ -1,22 +1,15 @@
 /* MAIN -VEHICULES- */
+
 .vehicules {
-  backdrop-filter: blur(5em);
-  -webkit-backdrop-filter: blur(5em);
-  height: 100%;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
-.vehicules-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-}
-#picture {
+#vehicules-slide {
   cursor: pointer;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
