NewImplements=>SPA = create index.ejs + mainPages

--- a/app/views/vehicules.ejs
+++ b/app/views/vehicules.ejs
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <%- include('./partials/head') %>
-  <body>
-    <div class="container">
-      <%- include('./partials/header-nav') %>
-      <main>
-        <div class="vehicules">
-            <img id="vehicules-slide" onclick="Slide(1)" src="images/vsl01.webp" alt="Photo de Véhicule Sanitaire Léger">
-        </div>
-      </main>
-      <%- include('./partials/footer') %>
-    </div>
-    <script src="js/slide.js"></script>
-  </body>
-</html>
+<div class="vehicules">
+  <img 
+  id="vehicules-slide" 
+  src="/images/vsl01.webp" 
+  alt="Photo de Véhicule Sanitaire Léger"
+  >
+</div>
+        
