--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,46 +6,25 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/mediaqueries.css">
     <link rel="stylesheet" href="/css/<%= cssFile %>">
-    <link rel="html" href="/app//views/<%= mainHtml %>">
+    <link rel="html" href="/app/views/<%= mainHtml %>">
     <title>
       <%= pageTitle %>
     </title>
   </head>
   <body>
     <div class="container">
-      <header>
-        <div class="header">
-          <a href="/">
-            <img class="header-img" src="images/caduce.webp" alt="CaducéeAmbulancier">
-          </a>
-          <a href="/">
-            <h1 class="header-h1">Ambulance X</h1>
-          </a>  
-          <section class="header-section">
-            <a class="header-a" href="/login">S'identifier</a>
-            <a class="header-a" href="/signup">S'enregistrer</a>
-          </section>
-        </div>
-      </header>
-      <nav>
-        <div class="nav">
-          <a class="nav-a" href="/">Accueil</a>
-          <a class="nav-a" href="/transports">Transports</a>
-          <a class="nav-a" href="/vehicules">Véhicules</a>
-          <a class="nav-a" href="/contact">Contact</a>
-        </div>
-      </nav>
+      
+      <%- include('./partials/header-nav') %>
+      
       <main>
         <%- include (mainHtml) %>
       </main>
-      <footer>
-        <div class="footer">
-          <a class="footer-a" href="/mentions">MENTIONS LÉGALES</a>
-        </div>
-      </footer>
+
+      <%- include('./partials/footer') %>
+
     </div>
-    <% if (script) { %>
-      <%- include (script) %>
-    <% } %>
+    <% if (cssFile === 'vehicules.css') {%>
+    <%- include('slide.ejs') %>
+    <%}%>
   </body>
 </html>
